fix: added updated version from javascript